- code cleanup, conforming to good practices etc etc